# guardduty-mcp

./: .env.example  BACKLOG.md  README.md  pyproject.toml
guardduty_agent/: __init__.py  cli.py  config.py  guardduty_client.py  mcp_server.py
guardduty_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py  test_guardduty_client.py
